--- a/frontend/src/pages/admin/UserManagement/UserManagement.module.css
+++ b/frontend/src/pages/admin/UserManagement/UserManagement.module.css
@@ -6,8 +6,8 @@
   background: white;
 }
 
-.userManagement :global(.ant-descriptions-bordered .ant-descriptions-item-label) {
+.userManagement
+  :global(.ant-descriptions-bordered .ant-descriptions-item-label) {
   font-weight: 600;
   width: 200px;
 }
-
