--- a/frontend/src/pages/auth/Register/RegisterPage.module.css
+++ b/frontend/src/pages/auth/Register/RegisterPage.module.css
@@ -5,7 +5,8 @@
   align-items: center;
   justify-content: center;
   /* Align tones with Home/Login: warm oranges on a light base */
-  background: url('../../../assets/images/LoginPage/Classical_Music-495872600.jpg') center/cover no-repeat;
+  background: url('../../../assets/images/LoginPage/Classical_Music-495872600.jpg')
+    center/cover no-repeat;
   color: #e6e6f0;
   overflow: hidden;
 }
