--- a/frontend/src/pages/admin/ServiceRequestManagement/ServiceRequestManagement.module.css
+++ b/frontend/src/pages/admin/ServiceRequestManagement/ServiceRequestManagement.module.css
@@ -24,6 +24,19 @@
 :global(.ant-table-thead > tr > th) {
   background-color: #fafafa;
   font-weight: 600;
+  border-right: 1px solid #f0f0f0;
+}
+
+:global(.ant-table-thead > tr > th:last-child) {
+  border-right: none;
+}
+
+:global(.ant-table-tbody > tr > td) {
+  border-right: 1px solid #f0f0f0;
+}
+
+:global(.ant-table-tbody > tr > td:last-child) {
+  border-right: none;
 }
 
 /* Badge styling */
