--- a/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
+++ b/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
@@ -238,6 +238,19 @@
   font-weight: 600;
 }
 
+.signature {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 60px;
+}
+
+.signature img {
+  max-height: 50px;
+  width: auto;
+  object-fit: contain;
+}
+
 .sigLine {
   height: 2px;
   background: #333;
