--- a/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
+++ b/frontend/src/pages/user/ContractDetail/ContractDetailPage.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: minmax(300px, 400px) 1fr;
   gap: 16px;
   min-height: 100vh;
-  padding: 16px;
+  padding-top: 190px;
   max-width: 100%;
   margin: 0 auto;
   overflow-x: hidden; /* Ngăn tràn ngang toàn page */
