--- a/frontend/src/pages/user/RequestDetail/RequestDetailPage.module.css
+++ b/frontend/src/pages/user/RequestDetail/RequestDetailPage.module.css
@@ -1,3 +1,12 @@
+.pageContainer {
+  padding-top: 100px;
+  padding-bottom: 60px;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
 .detailWrapper {
   margin: 0 auto;
   background-color: #ffffff;
