--- a/frontend/src/pages/user/ContractSignedSuccess/ContractSignedSuccessPage.module.css
+++ b/frontend/src/pages/user/ContractSignedSuccess/ContractSignedSuccessPage.module.css
@@ -1,10 +1,11 @@
 .page {
   min-height: 100vh;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  margin-top: 100px;
+  /* background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
 }
 
 .container {
-  max-width: 800px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 40px 20px;
 }
