--- a/frontend/src/components/modal/InstrumentSelectionModal/InstrumentSelectionModal.module.css
+++ b/frontend/src/components/modal/InstrumentSelectionModal/InstrumentSelectionModal.module.css
@@ -27,7 +27,7 @@
 .instrumentImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   transition: transform 0.3s ease;
 }
 
